+Fix not being able to run executables in Launch that have spaces in their
paths on Windows.
+Fix issues with aborting processes with Launch plugin on Windows.
+Fix crash that could occur if text was dragged over PluginMgr ListBox.
+Fix issue in Shelf tabs not being restored in correct order
+Fix issue where context menu on editor tabs could refer to wrong tab.

#-----------------------------------------------------------------------------#

VERSION 0.5.72
DATE 06/24/2010
36th Alpha Release

NEWS:
This release addresses a critical bug in the handling of HTML/XML files.

BUG FIXES:
+Fix error in HTML autocompletion.
+Fix application icon not showing up on Windows Vista and 7.
+Fix spellchecker dependencies missing in Windows binary builds.

#-----------------------------------------------------------------------------#

VERSION 0.5.70
DATE 06/12/2010
35th Alpha Release

NEWS:

NEW: [features/improvements]
+Improved TCL/Tk Highlighting
+Updated CodeBrowser Plugin 1.1 (improved Tcl/Tk, C, and CSS Support)
+Update Launch Plugin 1.7 (word wrap and lock file options)
+Improved AutoIndent functionality for HTML/XML
+Improve behavior of HTML autocomp

LIBRARY:
+Syntax modules that provide AutoIndenters are now responsible for adding the
text to the buffers them self instead of returning a string to the EditraStc.

BUG FIXES:
+Fix braces not getting un-highlighted when toggling setting on and off.
+Fix incorrect handling of xml in IPC server (patch from rqsall)
+Fix file open from commandline not respecting open files in new windows option.
+Fix incorrect closer notifications that could occur when using the close tab shortcut.
+Fix crash that could occur due to Python autocompletion executing a SystemExit exception.
+Fix Shelf tabs not updating when show icons on tab option is toggled.

#-----------------------------------------------------------------------------#

VERSION 0.5.60
DATE 05/16/2010
34th Alpha Release

NEWS: